tests/ui/foreign_optional.stderr
Error [E0020]: optional values use `value` and `null`, not `Some`
  --> tests/ui/foreign_optional.jet:2:13
    |
  2 |     val x = Some(1);
    |             ^^^^
 Why: Jet uses exactly one spelling for each thing, so all code reads the same
 Fix: replace `Some` with `value`
