tests/ui/foreign_optional.lex
fn main() {
    val x = Some(1);
    print(x);
}
